--- a/admin/projects/add_projects.html
+++ b/admin/projects/add_projects.html
@@ -8,22 +8,21 @@
 <br/><br/>
 
 <form action="add_projects.php" method="post" name="form1">
-    <table width="25%" border="0">
+    <table border="0" width="25%">
         <tr>
             <td>Title</td>
-            <td><input type="text" name="title"></td>
+            <td><input name="title" type="text"></td>
         </tr>
         <tr>
             <td>Picture</td>
-            <td><input type="text" name="picture"></td>
-        </tr>
+            <td><input name="image" type="file"></tr>
         <tr>
             <td>Description</td>
-            <td><input type="text" name="description"></td>
+            <td><input name="description" type="text"></td>
         </tr>
         <tr>
             <td></td>
-            <td><input type="submit" name="Submit" value="Add"></td>
+            <td><input name="Submit" type="submit" value="Add"></td>
         </tr>
     </table>
 </form>
